frontend/test/should_pass/computations_decl_use_recursive.grg
test t : (int)
{
	return(number(3));
}

number(var x:int) : int
{
	if(x<=1) {
		return(1);
	} else {
		return(1 + number(x - 1));
	}
}
