frontend/test/should_fail/computations_no_proc3.grg
procedure foo() : (int)
{
	return(42);
}

test bar()
{
	if { foo()<3; }
}
